--- a/opekete/src/components/pagetitle/style.css
+++ b/opekete/src/components/pagetitle/style.css
@@ -1,6 +1,6 @@
 
 .wpo-breadcumb-area {
-  background: url('../../images/breadcumb/img-11.jpg') no-repeat center top / cover;
+  background: url('../../images/breadcumb/opeketebackgrond.jpeg') no-repeat center top / cover;
   min-height: 350px;
   position: relative;
   display: flex;
