--- a/opekete/src/components/mission/style.css
+++ b/opekete/src/components/mission/style.css
@@ -2,8 +2,10 @@
 
 .wpo-mission-area {
     /* background: #f7fbfe; */
-    background-color: #f9f2e6;
+    /* background-color: #f9f2e6; */
     /* background-color: #fffafb; */
+    background-color: #f9f2e6 ;
+    /* background-color: #f0628a ; */
     padding-bottom: 100px;
 }
 
@@ -82,6 +84,7 @@
 
 .wpo-mission-item {
     background: #fff;
+    /* background-color: #f9f7ea ; */
     box-shadow: 0px 1px 40px 0px rgba(40, 63, 116, 0.1);
     padding: 50px 30px;
 }
