--- a/opekete/src/components/world/style.css
+++ b/opekete/src/components/world/style.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: url('../../images/world.png') no-repeat center center / cover;
+    background: url('../../images/volunteerhand.jpg') no-repeat center center / cover;
     align-items: center;
     position: relative;
     z-index: 1;
